[package]
name = "tower-client"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.15", features = ["io-compat"] }
hyper = "0.12"
pin-utils = "0.1.0-alpha.4"
tokio = { path = "../tokio/tokio", features = ["async-await-preview"] }
tokio-buf = "0.1.1"
tower = "0.1"
tower-test = "0.1"
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
http = "0.1.17"

[patch.crates-io]
tokio = { path = "../tokio/tokio", features = ["async-await-preview"] }